# lattice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/modules/: FindCSpec.cmake  FindLMDB.cmake
include/: edge.h  lattice.h  lattice_util.h  ltc_edge.h  ltc_env.h  ltc_type.h  ltc_util.h  ltc_vertex.h  type.h  vertex.h
lib/: CMakeLists.txt  edge.c  lattice.c  ltc_edge.c  ltc_env.c  ltc_util.c  util.c
spec/: CMakeLists.txt  util_spec.cpp
test/: CMakeLists.txt  lattice_desc.c
